# dpa-bench

./: .gitignore  AGENTS.md  Makefile  README.md  agents.md
dpa/: common.c  server_kernels_dev.c
p2p_rtt/doca/: client.c  common.h  server.c  server_dev.h
p2p_rtt/verbs/: client.c
qp_post/: README.md  build_dpacc.sh  client.c  client_dev.c  client_dev.h  common.c  common.h  defs.h  meson.build  meson_options.txt  server.c
thread_comm/: README.md  build_dpacc.sh  main.c  meson.build  thread_comm_common.h  thread_comm_dev.c
timer/: README.md  build_dpacc.sh  main.c  meson.build  wait_one_second_dev.c
wiki/: isa.md  sync.md  thread.md
